# TicTacToe_in_c

./: CMakeLists.txt  README.md  build.sh
src/: .main.c.swp  main.c
